Deregister misbehaving nodes
